fix error di swago
