# backend-go/handlers/user_handler.go
@@ -16,7 +16,7 @@ import (
 // @Produce      json
 // @Success      200  {object}  map[string]interface{} "Success response"
 // @Failure      500  {object}  model.ErrorResponse
-// @Router       /users [get]
+// @Router       /api/users [get]
 func GetUsers(c *fiber.Ctx) error {
 	var users []model.User
 
